common/src/main/webapp/less/style.less
/* ... */
html {
  // Required for iOS to work with 100vh
  // https://css-tricks.com/css-fix-for-100vh-in-mobile-webkit/
  height: -webkit-fill-available;
}

.observer-notes-wrapper {
  display: flex;
  justify-content: center;
  align-content: center;
}

.observer-notes {
  padding: 1em;
}

// https://css-tricks.com/responsive-data-tables/
.tile-xs-width
  .explore-brightnesses-container
  .ui.ui.ui.ui.table:not(.unstackable) {
  tfoot {
    display: block;
  }

  td {
    /* Behave  like a "row" */
    position: relative;
    padding-left: 40%;
    padding-right: 0.5em;
  }

  td::before {
    /* Now like a table header */
    position: absolute;

    /* Top/left values mimic padding */
    top: 6px;
    left: 6px;
    width: 45%;
    padding-left: 0.25em;
    white-space: nowrap;
  }

  td:first-child::before {
    font-weight: normal;
  }

  // It is a bit unfortunate that we have to hardcode the column names here
  td:nth-of-type(1)::before {
    content: "Value";
  }

  td:nth-of-type(2)::before {
    content: "Band";
  }

  td:nth-of-type(3)::before {
    content: "System";
  }

  td:nth-of-type(4)::before {
    content: "";
  }

  // Align the trash button
  td:last-child button {
    margin-left: auto;
  }
}

.explore-brightnesses-units-dropdown .ui.dropdown {
  white-space: nowrap;
}

.explore-brightnesses-delete-button-wrapper {
  display: flex;
  justify-content: center;

  .ui.button.delete-button {
    padding: 0.4em 0.4em 0.4em 0.4em;
  }
}

.explore-brightnesses-footer {
  display: flex;
  justify-content: flex-start;
  padding: 0.2em;
  border-top: 0.2px solid var(--under-tab-border-color);
  background-color: var(--table-footer-background);
}

.obs-badge-header {
  display: flex;
  align-items: center;
}

.obs-badge-description {
  display: flex;
  justify-content: space-between;
}

.ui.button.delete-button.obs-delete-button {
  margin: 0;
  padding: 0 !important;

  svg {
    margin: 0 !important;
  }
}

.crash-message {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.explore-help-icon {
  margin-left: 0.5em;
  cursor: pointer;
  color: var(--site-text-color);
}

.explore-help-icon-floating {
  position: absolute;
  top: 3px;
  z-index: 10;
}

.explore-help-sidebar {
  display: flex;
  flex-direction: column;
  height: 100%;
  max-height: 100%;
  min-height: 0;
}

.explore-help-title {
  display: flex;
  flex: 0 1 auto;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  background-color: var(--control-background-color);
  padding-left: 0.6em;
  padding-top: 0.6em;
  padding-bottom: 0.6em;
}

.explore-help-title-label {
  margin-bottom: 0;
}

.explore-help-body {
  flex: 1 1 auto;
  overflow: auto;
  min-height: 0;
  background-color: white;
}

.markdown-body {
  height: 100%;
  padding: 1em;

  svg.svg-inline--fa {
    color: hsl(210, 12.2%, 16.1%);
  }

  * {
    text-shadow: none;
    color: black;
  }
}

.ui.wide.right.sidebar {
  max-width: 100%;
  overflow: hidden !important;
}

.step-table-header {
  text-transform: unset !important;
}

.step-guided {
  color: lightgreen;
}

.explore-configuration-grid {
  padding: 0.5em;
  min-height: 0;
  display: grid;
  grid-gap: 0.5em;
  grid-template-areas:
    "form table-header"
    "form table";
  grid-template-columns: auto minmax(0, 1fr);
  grid-template-rows: auto 1fr;
  height: 100%;
}

.tile-sm-width,
.tile-xxs-width,
.tile-xs-width {
  .explore-configuration-grid {
    grid-template-areas:
      "form"
      "table-header"
      "table";
    grid-template-columns: 1fr;
    grid-template-rows: auto auto 1fr;
  }
}

.explore-form {
  display: grid;
  justify-items: start;
  align-items: baseline;
  align-self: start;
  grid-template-columns: [label] 1fr [field] 2fr [units] auto;

  .field {
    justify-self: stretch;
  }

  .explore-units-label {
    justify-self: start;
  }

  .field .ui.input,
  .field .ui.selection.dropdown {
    min-width: 100%;
  }
}

.explore-skip-to-next {
  grid-column: 1;
}

.explore-configuration-signal-to-noise-at {
  display: flex;
  margin-left: 0.25em;
  align-items: baseline;

  .explore-units-label {
    align-self: baseline;
    margin-bottom: unset;
  }

  :first-child {
    margin-right: 0.25em;
  }

  .field {
    width: 8ch;
  }
}

.explore-configuration-capabilities {
  grid-column: span 2;
}

.block.header.obs-tree-header {
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 5px;
  user-select: none;
  margin-top: 2px;
  margin-bottom: 0;

  :not(.obs-count) {
    text-transform: uppercase;
  }
}

.ui.dropdown.explore-configuration-filter {
  min-width: 100%;

  .menu > .item > .header {
    text-align: center;
    text-transform: uppercase;
    text-decoration: underline;
    font-size: smaller;
    pointer-events: none;
    cursor: unset;
  }
}

.explore-configuration-filter-item {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  justify-items: end;

  span:first-child {
    justify-self: start;
  }

  span:not(:first-child) {
    color: var(--site-input-placeholder-focus-color);
    font-size: smaller;
  }
}

.explore-button-copy {
  border: 0 !important; // important to override SUI's style.
}

.explore-buttons-undo {
  margin-left: auto;
}

.explore-button-summary {
  width: 100%;
}

.ui.labeled.icon.button.verycompact {
  padding-left: 2.3em !important;
  padding-right: 0.5em !important;

  .icon {
    width: 2em;
  }
}

.explore-shared-edit-warning {
  .warning-label-mixin();

  padding: 0.4em;

  .checkbox {
    padding-left: 2em;
  }
}

.explore-title-undo-buttons {
  text-align: right;
}

.explore-title-select-columns {
  flex-grow: 2;
  text-align: right;
}

.explore-select-columns {
  .menu {
    max-height: 30em !important;
    z-index: 3000;

    .item {
      font-size: small !important;
    }
  }
}

.explore-target-summary-delete {
  left: 0;
  width: 20px;
}

.explore-target-summary-select {
  left: 0;
  width: 45px;
}
/* ... */

